<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_desc">Protect your privacy security</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="done">Done</string>
    <string name="enter_passwd">Please enter your password</string>
    <string name="enter_passwd_again">Please confirm your password</string>
    <string name="passwd_not_match">Passwords do not match</string>
    <string name="pattern_too_small">Connect at least 3 dots</string>
    <string name="passwd_invalid">Invalid password</string>
    <string name="passwd_empty">"The password can't be empty"</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="lock_tab">Lock App</string>
    <string name="locked">Locked</string>
    <string name="setting_tab">Settings</string>
    <string name="mytheme">Theme</string>
    <string name="daily_app">Daily App</string>
    <string name="hide_file">Lock File</string>
    <string name="hide_app">Hide App</string>
    <string name="hide">Hide</string>
    <string name="hidden">Hidden</string>
    <string name="glock_settle">Setup</string>
    <string name="sdcard_not_prepared">SD-Card is not writable</string>
    <string name="help_tips">Useful tips</string>
    <string name="reset_sent">The secure code is sent to your email address.</string>
    <string name="help_rate">☆Rate me</string>
    <string name="help_share">☆Share with friends</string>
    <string name="help_sug">Contact us</string>
    <string name="help_recom">Recommend apps</string>
    <string name="help_about">About us</string>
    <string name="setting">Settings</string>
    <string name="help_help">"?  FAQ"</string>
    <string name="hide_fail">"This file can't be locked."</string>
    <string name="show_fail">"This file can't be unlocked."</string>
    <string name="show_success">Unlock success</string>
    <string name="hide_success">Lock success</string>
    <string name="phone_not_root">"You can't hide your apps because your phone has not been rooted"</string>
    <string name="hide_app_fail">"Can't hide %1$s(Your phone rooted?)"</string>
    <string name="show_app_fail">"Can't show %1$s(Your phone rooted?)"</string>
    <string name="hide_app_success">Hide %1$s success</string>
    <string name="show_app_success">Show %1$s success</string>
    <string name="hide_pic">Photo Vault</string>
    <string name="hide_video">Video Vault</string>
    <string name="search_hint">Type here to search</string>
    <string name="select_video">Select Video</string>
    <string name="select_pic">Select Photo</string>
    <string name="select_file">Select File</string>
    <string name="cant_preview">"This file can't be previewed."</string>
    <string name="cancel">Cancel</string>
    <string name="del_title">Delete</string>
    <string name="del_success">Deleted</string>
    <string name="del_fail">It can not be deleted</string>
    <string name="alert_for_del">"If you delete the file(s),you can't recover them."</string>
    <string name="understand">Delete</string>
    <string name="no_encrypted_file">Add something to protect in the vault</string>
    <string name="no_common_file">"You don't have anything here"</string>
    <string name="sure_exit">Do you want to exit?</string>
    <string name="help_normal_pass">Change Password</string>
    <string name="help_graph_pass">Change Pattern</string>
    <string name="set_graph">SET PATTERN</string>
    <string name="confirm_graph">CONFIRM PATTERN</string>
    <string name="draw_graphical_passwd">Draw a pattern</string>
    <string name="draw_graphical_passwd_again">Confirm pattern</string>
    <string name="use_normal_passwd">Use Password To Unlock</string>
    <string name="passwd_is_set">Password set success</string>
    <string name="passwd_is_set_fail">"Can't set password"</string>
    <string name="next">Next</string>
    <string name="unlock_type">Unlock type</string>
    <string name="use_normal">Password Lock</string>
    <string name="use_graphic">Pattern Lock</string>
    <string name="sure_no_email">"If you quit setting secure email, there will be more security hazards, and you can not reset password if you forget it.Are you sure to skip?"</string>
    <string name="enter_email">Enter your secure email address:</string>
    <string name="email_address_invalid">Invalid email address, try again</string>
    <string name="passwd_not_touched">The password has not been changed</string>
    <string name="forgot_passwd">Forgot password</string>
    <string name="email_not_exists">"You are not able to reset password because you have skipped setting secure email."</string>
    <string name="title_forget_passwd">Forget Password</string>
    <string name="reset_passwd_1">1) Send secure code to your secure email:</string>
    <string name="reset_passwd_1_btn">Send</string>
    <string name="reset_passwd_2">2) Enter the secure code you received in your secure email:</string>
    <string name="reset_passwd_2_btn">Reset Password</string>
    <string name="enter_secure_code">Please enter the secure code</string>
    <string name="secure_code_invalid">Invalid secure code</string>
    <string name="app_lock_stopped">Super AppLock is stopped</string>
    <string name="app_lock_opened">Super AppLock is running</string>
    <string name="app_lock_to_stop">Tap to turn off Super AppLock</string>
    <string name="app_lock_to_open">Tap to turn on Super AppLock</string>
    <string name="show_noti">Toggle notification</string>
    <string name="show_noti_desc">Show toggle button in the notification</string>
    <string name="unlock_success">Unlock %1$s success</string>
    <string name="lock_success">Lock %1$s success</string>
    <string name="secure_email">Secure Email</string>
    <string name="save">Save</string>
    <string name="set_passwd">Please set your password</string>
    <string name="brief_exit">Brief exit</string>
    <string name="brief_exit_detail">Not to relock after a brief exit</string>
    <string name="brief_exit_screen_off">Relock after screen off</string>
    <string name="brief_exit_slot">Brief exit time limit</string>
    <string name="after_screen_off">Relock after screen off</string>
    <string name="after_screen_off_detail">Relock all the apps after the screen is locked</string>
    <string name="lock_new_app">Lock new apps</string>
    <string name="lock_new_app_desc">One tap to lock newly installed app.</string>
    <string name="random_keyboard">Random keyboard</string>
    <string name="random_keyboard_desc">Randomly arrange password keyboard to prevent from peeping to ensure security.</string>
    <string name="fifteen_sec">15 seconds</string>
    <string name="thirty_sec">30 seconds</string>
    <string name="one_min">1 minute</string>
    <string name="three_min">3 minutes</string>
    <string name="five_min">5 minutes</string>
    <string name="until_screen_off">Until screen off</string>
    <string name="ask_lock_new">Do you want to lock \"%1$s\"?</string>
    <string name="dev_admin_actived">Uninstall protection is activated! You can deactivate it in AppLock settings. Unable to uninstall from outside under this uninstall protection. </string>
    <string name="dev_admin_canceled">Uninstall protection is disabled</string>
    <string name="decrypt_title">Move out</string>
    <string name="decrypt_desc">Are you sure you want to move it out of vault?</string>
    <string name="decrypt_yes">OK</string>
    <string name="encrypt_title">Move in</string>
    <string name="encrypt_desc">"Are you sure you want to move it into vault?"</string>
    <string name="encrypt_yes">OK</string>
    <string name="set_pass">SET PASSWORD</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>
    <string name="set_secure_email">SET SECURE EMAIL</string>
    <string name="tip_set_pass">enter 6 digits</string>
    <string name="tip_set_email">enter your email address</string>
    <string name="tip_set_graph">enter your pattern to unlock</string>
    <string name="contact_us">Any question,just email us</string>
    <string name="tip_no_email">Strongly recommend you set up a secure email to enjoy more security and stay away from unexpected security hazards.</string>
    <string name="rate_title">Rate Me</string>
    <string name="rate_msg">Like Super AppLock? Take a second to rate us please! </string>
    <string name="rate_now">Rate Now</string>
    <string name="later">Later</string>
    <string name="share_title">A very useful app to share with you.</string>
    <string name="share_msg">"Hey, I'm using "Super AppLock". Very useful. Get it here: %1$s"</string>
    <string name="overf_brief">Brief Setting</string>
    <string name="overf_unlock_me">Unlock the App</string>
    <string name="refreshing">Refreshing&#8230;</string>
    <string name="help_uninstall">Uninstall</string>
    <string name="uninstall_message">"You'll lose photos &amp; videos locked in the vault. Move them out,or reinstall Super AppLock to recover them."</string>
    <string name="website">Visit Website</string>
    <string name="support_email" translatable="false">support@51privacy.com</string>
    <string name="google">https://plus.google.com/u/1/communities/103886432289711131445</string>
    <string name="facebook" translatable="false">https://www.facebook.com/PrivacyLock</string>
    <string name="twitter" translatable="false">https://twitter.com/Privacy_Lock</string>
    <string name="copyright" translatable="false">Copyright © 2009–2016 PrivacyGroup Ltd.\nAll Rights Reserved.</string>
    <string name="unlock_me">enter your password to unlock this app</string>
    <string name="every_time">Always lock</string>
    <string name="theme">Theme</string>
    <string name="new_themes">New Themes</string>
    <string name="installed_themes">Installed</string>
    <string name="apply">Apply</string>
    <string name="use_pattern">Use Pattern To Unlock</string>
    <string name="permission_title">Permission</string>
    <string name="permission_msg">"Can't lock apps without your permission after Lollipop, grant it to us please"</string>
    <string name="permission_grant">Grant</string>
    <string name="theme_in_using">this theme is in using</string>
    <string name="use_theme_success">theme is changed</string>
    <string name="pause_protect">Stop Protect</string>
    <string name="pause_desc">Stop AppLock Service</string>
    <string name="no_wifi">No Wifi detected, tap to load anyway</string>
    <string name="advanced_security">Uninstall protection</string>
    <string name="advanced_security_detail">If you want to uninstall Super AppLock, please disable this first.</string>
    <string name="security_five_start">We are committed to protecting your privacy. Could you give us a 5-star-rating? </string>
    <string name="applock_permission">For better privacy protection, please allow access permission.</string>
    <string name="applock_permission_allow">Allow</string>
    <string name="security_cancel">Cancel</string>
    <string name="security_rate_bad">BAD</string>
    <string name="security_rate_good">GOOD</string>
    <string name="security_rate_msg">If you like AppLock, please give us a 5-star-rating.</string>
    <string name="suo_ruqinzhe">Intruder selfie </string>
    <string name="suo_ruqinzhe_on">Intruder detector is turned on</string>
    <string name="suo_ruqinzhe_off">Intruder detector is turned off</string>
    <string name="suo_intru_selfie">Intruder Selfie</string>
    <string name="suo_intru_w_tit">Incorrect code entered</string>
    <string name="suo_intru_shutter">Enable shutter sound</string>
</resources>