<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/unlock_type">
        <Preference android:key="nor"
            android:layout="@layout/security_unlock_switch"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_tab">
        <Preference
            android:key="pp"
            android:title="@string/help_normal_pass" />
        <Preference
            android:key="pg"
            android:title="@string/help_graph_pass" />
        <Preference
            android:key="email"
            android:title="@string/secure_email" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced_security">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="stop_service"
            android:title="@string/pause_protect" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sn"
            android:summary="@string/show_noti_desc"
            android:title="@string/show_noti" />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/overf_brief"
            android:entries="@array/brief_slot"
            android:entryValues="@array/brief_slot_idx"
            android:key="brief_slot"
            android:title="@string/overf_brief" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="advanced"
            android:summary="@string/advanced_security_detail"
            android:title="@string/advanced_security" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="random"
            android:summary="@string/random_keyboard_desc"
            android:title="@string/random_keyboard" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="lock_new"
            android:summary="@string/lock_new_app_desc"
            android:title="@string/lock_new_app" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help_rate">
        <Preference
            android:key="rate"
            android:title="@string/help_rate" />
        <Preference
            android:key="share"
            android:title="@string/help_share" />
    </PreferenceCategory>
</PreferenceScreen>