<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/suo_ruqinzhe" >
        <CheckBoxPreference
            android:key="invade_set_kaiguan"
            android:summaryOff="@string/suo_ruqinzhe_off"
            android:summaryOn="@string/suo_ruqinzhe_on"
            android:title="@string/suo_intru_selfie"
            />
        <ListPreference
            android:defaultValue="0"
            android:dependency="invade_set_kaiguan"
            android:dialogTitle="@string/suo_intru_w_tit"
            android:entries="@array/suo_ruqinzhe_slot"
            android:entryValues="@array/suo_invade_st_"
            android:key="invade_set_n"
            android:title="@string/suo_intru_w_tit"
            />
        <CheckBoxPreference
            android:key="invade_set_shengyin"
            android:title="@string/suo_intru_shutter"
            android:dependency="invade_set_kaiguan"
            />

    </PreferenceCategory>
</PreferenceScreen>