<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#ffffffff" android:paddingLeft="20dp"
              android:paddingRight="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock_type"
            android:textSize="18sp"
            android:id="@+id/title" android:textColor="#FF000000"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:orientation="horizontal"
            >
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_normal"
                android:id="@+id/use_normal" android:layout_gravity="center_vertical" android:textColor="#FF000000"
                android:layout_alignTop="@+id/use_graphic" android:layout_alignParentLeft="true"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_graphic"
                android:id="@+id/use_graphic" android:layout_gravity="center_vertical" android:textColor="#FF000000"
                android:layout_centerVertical="true" android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>