<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="220dp"
    android:orientation="vertical">


     <FrameLayout
         android:layout_gravity="center_horizontal"
         android:layout_width="330dp"
         android:layout_height="wrap_content">

         <ImageView
             android:background="@drawable/normal_rectangle"
             android:id="@+id/linbac"
             android:layout_width="match_parent"
             android:layout_height="64dp" />

          <LinearLayout
              android:layout_gravity="center_vertical|center_horizontal"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
             >
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:fontFamily="sans-serif"
                  android:text="@string/permission_title"
                  android:textColor="@android:color/white"
                  android:textSize="18sp"
                  />

          </LinearLayout>

     </FrameLayout>

     <LinearLayout
         android:background="@drawable/normal_bootom_rectangle"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="133dp"
         android:id="@+id/nihaooaaa">



     <TextView
         android:lineSpacingExtra="4dp"
         android:paddingRight="20dp"
         android:layout_width="match_parent"
         android:paddingLeft="20dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif"
         android:gravity="left"
         android:text="@string/applock_permission"
         android:textColor="@color/security_black_87"
         android:textSize="15sp" />


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:layout_marginTop="18dp"
         android:orientation="horizontal">

         <TextView
             android:id="@+id/cancle"
             android:textColor="#93a9b7"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/security_cancel"
             android:textSize="15sp" />


         <TextView
             android:layout_marginRight="10dp"
             android:background="@drawable/theme_color_rectangle"
             android:id="@+id/ok"
             android:textColor="@android:color/white"
             android:layout_width="153dp"
             android:layout_height="match_parent"
             android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/applock_permission_allow"
             android:textSize="15sp" />

     </LinearLayout>
 </LinearLayout>
</LinearLayout>

