<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    
    >


    <ImageView
        android:background="@drawable/security_five_dialo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingLeft="12dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_five_start"
        android:maxEms="18"
        android:id="@+id/tv"
        android:textSize="12sp"
        android:textColor="#777a88"
        android:fontFamily="sans-serif-light"
        />

    <LinearLayout
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:layout_marginLeft="8dp"
            android:id="@+id/security_bad_bt"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:text="@string/security_rate_bad"
            android:textSize="18sp"
            android:textColor="#a8aab2"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"

            />

        <Button
            android:layout_marginRight="28dp"
            android:id="@+id/security_good_bt"
            android:background="@drawable/evaluation_rectangle"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/security_rate_good"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            android:textColor="#ffffff"

            />


    </LinearLayout>


</LinearLayout>






