<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d8"
        android:background="@color/A4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d12"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/headerlottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d16"
            android:src="@drawable/xin" />

        <com.security.lib.customview.CustomerTypefaceTextView
            android:id="@+id/security_title_bar_te"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d5"
            android:layout_weight="1"
            android:text="@string/rote_support"
            android:textColor="@color/A5"
            android:textSize="@dimen/s16" />

        <LinearLayout
            android:id="@+id/security_rat_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="@dimen/d16"
            android:paddingRight="@dimen/d16">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/security_incade_cha" />
        </LinearLayout>
    </LinearLayout>

    <com.security.lib.customview.CustomerTypefaceTextView
        android:id="@+id/scan_result_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/security_title_bar_te"
        android:layout_marginLeft="@dimen/d16"
        android:layout_marginTop="@dimen/d14"
        android:text="@string/security_rate_msg"
        android:textColor="@color/A5"
        android:textSize="@dimen/s14" />

    <LinearLayout
        android:id="@+id/two_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d12"
        android:layout_marginTop="@dimen/d22"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/security_bad_tit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bad" />

            <com.security.lib.customview.CustomerTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d5"
                android:text="@string/security_rate_bad"
                android:textColor="@color/A6"
                android:textSize="@dimen/s14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/security_good_tit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.security.lib.customview.CustomerTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d5"
                android:text="@string/security_rate_good"
                android:textColor="@color/A7"
                android:textSize="@dimen/s14" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d8"
        android:background="@color/A4" />
</LinearLayout>

